[package]
name = "hubtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srec = { version = "0.2.0", default-features = false }
anyhow = { version = "1", default-features = false, features = ["std"] }
