[package]
name = "fwidgen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.version = "1"
clap = { version = "4.5.32", features = ["derive", "env", "wrap_help"] }
hex = "0.4.3"
hubtools.workspace = true
sha3 = { version = "0.10.8", default-features = false }
toml = { version = "0.7.8", default-features = false, features = ["parse"] }
