[package]
name = "hubtools"
version = "0.1.0"
edition = "2021"

[dependencies]
object = { version = "0.30", default-features = false, features = ["write", "read"] }
packed_struct = { version = "0.10", default-features = false, features = ["std"] }
path-slash = { version = "0.1", default-features = false }
thiserror = { version = "1", default-features = false }
toml = { version = "0.7", default-features = false, features = ["parse"] }
zerocopy = { version = "0.6", default-features = false }
zip = { version = "0.6", default-features = false, features = ["bzip2"] }

tlvc = { git = "https://github.com/oxidecomputer/tlvc", default-features = false }
tlvc-text = { git = "https://github.com/oxidecomputer/tlvc", default-features = false }
lpc55_sign = { git = "https://github.com/oxidecomputer/lpc55_support", default-features = false, version = "0.2" }
lpc55_areas = { git = "https://github.com/oxidecomputer/lpc55_support", default-features = false, version = "0.2" }
