[package]
name = "hubtools"
version = "0.4.7"
edition = "2021"
rust-version = "1.66"

[dependencies]
object = { version = "0.30", default-features = false, features = ["write", "read"] }
path-slash = { version = "0.1", default-features = false }
thiserror = { version = "1", default-features = false }
toml = { version = "0.7", default-features = false, features = ["parse"] }
x509-cert = { version = "0.2", default-features = false, features = ["std"] }
zerocopy = { version = "0.6", default-features = false }
zip = { version = "0.6", default-features = false, features = ["bzip2"] }
hex = { version = "0.4.3", default-features = false }

tlvc = { git = "https://github.com/oxidecomputer/tlvc", default-features = false, version = "0.3" }
tlvc-text = { git = "https://github.com/oxidecomputer/tlvc", default-features = false, version = "0.3" }
lpc55_sign = { git = "https://github.com/oxidecomputer/lpc55_support", default-features = false, version = "0.3" }
lpc55_areas = { git = "https://github.com/oxidecomputer/lpc55_support", default-features = false, version = "0.2" }
rsa = { version = "0.9.0", default-features = false, features = ["std", "pem", "sha2"] }
